--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div id="infoContainer">
-        <div id="selectedVisitsContainer">الزيارات: لم يتم اختيار</div>
+        <div id="selectedVisitsContainer">الزيارات: لم يتم اختيار أي زيارة</div>
         <div id="completionRateContainer"></div>
       </div>
     </div>
@@ -178,7 +178,7 @@
         const college = document.getElementById('collegeFilter').value;const auditor = document.getElementById('auditorFilter').value;lastCollege = college || "جميع الكليات";let url = '/api/committees';const params = [];
         if (college) params.push(`college=${encodeURIComponent(college)}`);if (auditor) params.push(`auditor_name=${encodeURIComponent(auditor)}`);if (params.length > 0) url += '?' + params.join('&');
         const res = await axios.get(url);const tbody = document.getElementById('committeesTable');tbody.innerHTML = "";
-        if(res.data.length === 0){tbody.innerHTML = `<tr><td colspan="18" class="text-center">لا توجد بيانات</td></tr>`;document.getElementById("completionRateContainer").innerHTML = "";document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: لا توجد";return;}
+        if(res.data.length === 0){tbody.innerHTML = `<tr><td colspan="18" class="text-center">لا توجد بيانات</td></tr>`;document.getElementById("completionRateContainer").innerHTML = "";document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: لم يتم اختيار أي زيارة";return;}
         res.data.sort((a,b)=>(a.college||"").localeCompare(b.college||"","ar"));res.data.forEach((c, idx) => {
           const tr = document.createElement('tr');tr.innerHTML = `
             <td>${idx+1}</td><td>${c.college}</td><td>${c.committee_name}</td><td>${c.auditor_name}</td><td>${c.audit_date ? new Date(c.audit_date).toLocaleDateString('ar-EG'): '-'}</td>
