--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="card mb-3">
-        <div class="card-body d-flex flex-wrap justify-content-center gap-3" id="columnToggles">
+        <div class="card-body d-flex flex-wrap justify-content-center gap-3 align-items-center" id="columnToggles">
           <div class="form-check"><input class="form-check-input col-toggle" type="checkbox" id="toggle_formation_decision" data-field="formation_decision" checked><label class="form-check-label" for="toggle_formation_decision">قرار التشكيل</label></div>
           <div class="form-check"><input class="form-check-input col-toggle" type="checkbox" id="toggle_work_plan" data-field="work_plan" checked><label class="form-check-label" for="toggle_work_plan">خطة العمل</label></div>
           <div class="form-check"><input class="form-check-input col-toggle" type="checkbox" id="toggle_performance_indicators" data-field="performance_indicators" checked><label class="form-check-label" for="toggle_performance_indicators">مؤشرات الأداء</label></div>
@@ -105,6 +105,7 @@
           <div class="form-check"><input class="form-check-input col-toggle" type="checkbox" id="toggle_report2" data-field="report2" checked><label class="form-check-label" for="toggle_report2">تقرير إنجاز 2</label></div>
           <div class="form-check"><input class="form-check-input col-toggle" type="checkbox" id="toggle_report3" data-field="report3" checked><label class="form-check-label" for="toggle_report3">تقرير إنجاز 3</label></div>
           <div class="form-check"><input class="form-check-input col-toggle" type="checkbox" id="toggle_statistical_analysis" data-field="statistical_analysis" checked><label class="form-check-label" for="toggle_statistical_analysis">التحليل الإحصائي</label></div>
+          <button class="btn btn-outline-primary btn-sm" id="saveSettingsBtn">💾 حفظ الإعدادات</button>
         </div>
       </div>
       <div id="infoContainer">
@@ -239,6 +240,45 @@
       document.getElementById("availabilityHeader").innerText = `درجة التوفر من (${visibleCols})`;
     }
     updateAvailabilityHeader();
+
+    // تحميل الإعدادات من السيرفر
+    async function loadSettings() {
+      try {
+        const res = await axios.get('/api/settings');
+        const settings = res.data;
+        if (settings.visibleColumns) {
+          document.querySelectorAll('.col-toggle').forEach(cb => {
+            cb.checked = settings.visibleColumns.includes(cb.getAttribute('data-field'));
+          });
+        }
+        if (settings.selectedVisits) {
+          document.querySelectorAll('.visit-toggle').forEach(cb => {
+            cb.checked = settings.selectedVisits.includes(cb.value);
+          });
+        }
+        applyColumnVisibility();
+        updateSelectedVisits();
+      } catch (err) {
+        console.error("❌ فشل تحميل الإعدادات", err);
+      }
+    }
+
+    // حفظ الإعدادات في السيرفر
+    async function saveSettings() {
+      try {
+        const visibleColumns = Array.from(document.querySelectorAll('.col-toggle:checked')).map(cb => cb.getAttribute('data-field'));
+        const selectedVisits = Array.from(document.querySelectorAll('.visit-toggle:checked')).map(cb => cb.value);
+        await axios.put('/api/settings', { visibleColumns, selectedVisits });
+        showSuccess("✅ تم حفظ الإعدادات بنجاح");
+      } catch (err) {
+        console.error("❌ فشل حفظ الإعدادات", err);
+        showError("❌ خطأ في حفظ الإعدادات");
+      }
+    }
+    document.getElementById('saveSettingsBtn').addEventListener('click', saveSettings);
+
+    // تحميل الإعدادات عند بداية التشغيل
+    loadSettings();
   </script>
 </body>
 </html>
