--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -91,6 +91,7 @@
           <div class="form-check"><input class="form-check-input visit-toggle" type="checkbox" id="visit3" value="الزيارة الثالثة"><label class="form-check-label" for="visit3">الزيارة الثالثة</label></div>
           <div class="form-check"><input class="form-check-input visit-toggle" type="checkbox" id="visit4" value="الزيارة الرابعة"><label class="form-check-label" for="visit4">الزيارة الرابعة</label></div>
           <div class="form-check"><input class="form-check-input visit-toggle" type="checkbox" id="visit5" value="الزيارة النهائية"><label class="form-check-label" for="visit5">الزيارة النهائية</label></div>
+          <button class="btn btn-sm btn-success" id="saveSettingsBtn">💾</button>
         </div>
       </div>
       <div class="card mb-3">
@@ -105,11 +106,10 @@
           <div class="form-check"><input class="form-check-input col-toggle" type="checkbox" id="toggle_report2" data-field="report2" checked><label class="form-check-label" for="toggle_report2">تقرير إنجاز 2</label></div>
           <div class="form-check"><input class="form-check-input col-toggle" type="checkbox" id="toggle_report3" data-field="report3" checked><label class="form-check-label" for="toggle_report3">تقرير إنجاز 3</label></div>
           <div class="form-check"><input class="form-check-input col-toggle" type="checkbox" id="toggle_statistical_analysis" data-field="statistical_analysis" checked><label class="form-check-label" for="toggle_statistical_analysis">التحليل الإحصائي</label></div>
-          <button class="btn btn-outline-primary btn-sm" id="saveSettingsBtn">💾 حفظ الإعدادات</button>
         </div>
       </div>
       <div id="infoContainer">
-        <div id="selectedVisitsContainer">الزيارات: لم يتم اختيار أي زيارة</div>
+        <div id="selectedVisitsContainer">الزيارات: لم يتم إختيار أي زيارة</div>
         <div id="completionRateContainer"></div>
       </div>
     </div>
@@ -179,7 +179,7 @@
         const college = document.getElementById('collegeFilter').value;const auditor = document.getElementById('auditorFilter').value;lastCollege = college || "جميع الكليات";let url = '/api/committees';const params = [];
         if (college) params.push(`college=${encodeURIComponent(college)}`);if (auditor) params.push(`auditor_name=${encodeURIComponent(auditor)}`);if (params.length > 0) url += '?' + params.join('&');
         const res = await axios.get(url);const tbody = document.getElementById('committeesTable');tbody.innerHTML = "";
-        if(res.data.length === 0){tbody.innerHTML = `<tr><td colspan="18" class="text-center">لا توجد بيانات</td></tr>`;document.getElementById("completionRateContainer").innerHTML = "";document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: لم يتم اختيار أي زيارة";return;}
+        if(res.data.length === 0){tbody.innerHTML = `<tr><td colspan="18" class="text-center">لا توجد بيانات</td></tr>`;document.getElementById("completionRateContainer").innerHTML = "";document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: لم يتم إختيار أي زيارة";return;}
         res.data.sort((a,b)=>(a.college||"").localeCompare(b.college||"","ar"));res.data.forEach((c, idx) => {
           const tr = document.createElement('tr');tr.innerHTML = `
             <td>${idx+1}</td><td>${c.college}</td><td>${c.committee_name}</td><td>${c.auditor_name}</td><td>${c.audit_date ? new Date(c.audit_date).toLocaleDateString('ar-EG'): '-'}</td>
@@ -241,7 +241,6 @@
     }
     updateAvailabilityHeader();
 
-    // تحميل الإعدادات من السيرفر
     async function loadSettings() {
       try {
         const res = await axios.get('/api/settings');
@@ -257,13 +256,12 @@
           });
         }
         applyColumnVisibility();
-        updateSelectedVisits();
+        updateSelectedVisits(); // ✅ استدعاء مباشر بعد تحميل الإعدادات
       } catch (err) {
         console.error("❌ فشل تحميل الإعدادات", err);
       }
     }
 
-    // حفظ الإعدادات في السيرفر
     async function saveSettings() {
       try {
         const visibleColumns = Array.from(document.querySelectorAll('.col-toggle:checked')).map(cb => cb.getAttribute('data-field'));
@@ -277,7 +275,6 @@
     }
     document.getElementById('saveSettingsBtn').addEventListener('click', saveSettings);
 
-    // تحميل الإعدادات عند بداية التشغيل
     loadSettings();
   </script>
 </body>
